--- a/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
+++ b/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
@@ -93,6 +93,10 @@
       <Project>{B29B12BB-0520-40B9-B9F4-34A978D517DB}</Project>
       <Name>Aps.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Aps\Aps.csproj">
+      <Project>{747320bd-946c-46a1-b803-86bbcb703a17}</Project>
+      <Name>Aps</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
