--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Account\AccountRepository.cs" />
     <Compile Include="Account\AccountStatus.cs" />
     <Compile Include="Account\Credentials.cs" />
+    <Compile Include="Account\IAccountStatusUpdateService.cs" />
     <Compile Include="Companies\BaseUrl.cs" />
     <Compile Include="Companies\BillingCycle.cs" />
     <Compile Include="Companies\Company.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Companies\CompanyType.cs" />
     <Compile Include="Companies\CycleMethod.cs" />
     <Compile Include="Companies\ICompanyRepository.cs" />
+    <Compile Include="Companies\ICompanyScriptService.cs" />
     <Compile Include="Companies\IDataIntegrityCheckOverride.cs" />
     <Compile Include="Companies\AccountStatmentEntryMapping.cs" />
     <Compile Include="Companies\CompanyName.cs" />
@@ -116,7 +118,6 @@
     <Compile Include="Customers\CustomerID.cs" />
     <Compile Include="Customers\CustomerName.cs" />
     <Compile Include="Customers\ICustomerRepository.cs" />
-    <Compile Include="DefaultFormatProviderSettings.cs" />
     <Compile Include="Common\Encryption.cs" />
     <Compile Include="Credential\Password.cs" />
     <Compile Include="Credential\SecurityCode.cs" />
@@ -132,8 +133,6 @@
     <Compile Include="Credential\IdentityNumber.cs" />
     <Compile Include="Credential\EmailAddress.cs" />
     <Compile Include="Credential\UserName.cs" />
-    <Compile Include="EnumExtensions.cs" />
-    <Compile Include="Guard.cs" />
     <Compile Include="DomainException.cs" />
     <Compile Include="IAccountStatementCreationService.cs" />
     <Compile Include="ICompanyName.cs" />
@@ -141,6 +140,7 @@
     <Compile Include="IAccountId.cs" />
     <Compile Include="ICustomerNotificationService.cs" />
     <Compile Include="IScrapeSessionResultCode.cs" />
+    <Compile Include="Notifications\INotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ScrapeResultDataPair.cs" />
     <Compile Include="Scraping\IScraperScriptParser.cs" />
@@ -154,10 +154,14 @@
     <Compile Include="Scraping\ScrapeSessionResult.cs" />
     <Compile Include="Scraping\ScrapeSessionResultCode.cs" />
     <Compile Include="Scraping\StatusNotificationRuleAttribute.cs" />
-    <Compile Include="StringExtensions.cs" />
     <Compile Include="Validator.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Aps\Aps.csproj">
+      <Project>{747320bd-946c-46a1-b803-86bbcb703a17}</Project>
+      <Name>Aps</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
