--- a/Src/Aps/Aps.csproj
+++ b/Src/Aps/Aps.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E07977A9-FE2C-473C-A6DC-E0FD341D1B24}</ProjectGuid>
+    <ProjectGuid>{747320BD-946C-46A1-B803-86BBCB703A17}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aps.Domain.Services</RootNamespace>
-    <AssemblyName>Aps.Domain.Services</AssemblyName>
+    <RootNamespace>Aps</RootNamespace>
+    <AssemblyName>Aps</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,29 +37,19 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ScrapeSessionResultPipeline\AccountStatmentCreationModule.cs" />
-    <Compile Include="ScrapeSessionResultPipeline\AccountStatusUpdateModule.cs" />
-    <Compile Include="AccountStatementServices\AccountStatmentCreationService.cs" />
-    <Compile Include="AccountStatementServices\AccountStatmentDisplayService.cs" />
-    <Compile Include="CustomerServices\CustomerRegistrationService.cs" />
+    <Compile Include="DefaultFormatProviderSettings.cs" />
+    <Compile Include="EnumExtensions.cs" />
+    <Compile Include="Guard.cs" />
+    <Compile Include="IPipelineModule.cs" />
+    <Compile Include="Pipeline.cs" />
+    <Compile Include="PipelineFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScrapeSessionResultPipeline\BrokenScriptModule.cs" />
-    <Compile Include="ScrapeSessionResultPipeline\CustomerNotificationModule.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Aps.Domain\Aps.Domain.csproj">
-      <Project>{B29B12BB-0520-40B9-B9F4-34A978D517DB}</Project>
-      <Name>Aps.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Aps\Aps.csproj">
-      <Project>{747320BD-946C-46A1-B803-86BBCB703A17}</Project>
-      <Name>Aps</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
