--- a/Src/Aps.Application.Tests/Aps.Application.Tests.csproj
+++ b/Src/Aps.Application.Tests/Aps.Application.Tests.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{35299DBC-45BA-4A71-8BBB-CA7DFFC7B75A}</ProjectGuid>
+    <ProjectGuid>{BF05AB45-4285-4934-934A-7C6EEB6F8BC2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>APS.Domain.Services.Tests</RootNamespace>
-    <AssemblyName>APS.Domain.Services.Tests</AssemblyName>
+    <RootNamespace>Aps.Application.Tests</RootNamespace>
+    <AssemblyName>Aps.Application.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,8 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,18 +40,17 @@
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="LightBDD">
+    <Reference Include="LightBDD, Version=1.7.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LightBDD.Core.1.7.1.0\lib\net40\LightBDD.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="LightBDD.MsTest">
+    <Reference Include="LightBDD.MsTest, Version=1.7.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LightBDD.MsTest.1.7.1.0\lib\net40\LightBDD.MsTest.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Moq, Version=4.5.10.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.5.10\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
-    </Reference>
-    <Reference Include="Shouldly">
-      <HintPath>..\packages\Shouldly.2.7.0\lib\net40\Shouldly.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -69,38 +67,29 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Fixitures\Pipeline_modules.Fixture.cs" />
-    <Compile Include="Fixitures\Account_statment_creation_pipeline_module.cs" />
     <Compile Include="Account_statment_creation_pipeline_module.cs" />
-    <Compile Include="Stubs\AccountIdStub.cs" />
-    <Compile Include="Stubs\TestPipelineModule1.cs" />
-    <Compile Include="Stubs\TestPipelineModule2.cs" />
-    <Compile Include="Stubs\TestContext.cs" />
-    <Compile Include="Pipeline_modules.cs" />
+    <Compile Include="Fixitures\Account_statment_creation_pipeline_module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stubs\AccountIdStub.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Aps.Application\Aps.Application.csproj">
       <Project>{4608CB51-82F9-4AAB-8E85-0FCAF09718F4}</Project>
       <Name>Aps.Application</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Aps.Domain.Services\Aps.Domain.Services.csproj">
-      <Project>{E07977A9-FE2C-473C-A6DC-E0FD341D1B24}</Project>
-      <Name>Aps.Domain.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\Aps.Domain\Aps.Domain.csproj">
       <Project>{B29B12BB-0520-40B9-B9F4-34A978D517DB}</Project>
       <Name>Aps.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Aps\Aps.csproj">
-      <Project>{747320bd-946c-46a1-b803-86bbcb703a17}</Project>
+      <Project>{747320BD-946C-46A1-B803-86BBCB703A17}</Project>
       <Name>Aps</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -122,13 +111,6 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
