--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -141,6 +141,8 @@
     <Compile Include="IScrapeSessionResultCode.cs" />
     <Compile Include="Notifications\AccountActivityNotificationId.cs" />
     <Compile Include="Notifications\INotificationService.cs" />
+    <Compile Include="Notifications\NotificationStatus.cs" />
+    <Compile Include="Notifications\NotificationType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ScrapeResultDataPair.cs" />
     <Compile Include="Scraping\IScraperScriptParser.cs" />
