--- a/Src/Aps.Domain.Services/Aps.Domain.Services.csproj
+++ b/Src/Aps.Domain.Services/Aps.Domain.Services.csproj
@@ -55,7 +55,9 @@
       <Name>Aps</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NotificationServices\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
