--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Credential\SecurityCode.cs" />
     <Compile Include="Credential\PinNumber.cs" />
     <Compile Include="IAccountNumber.cs" />
+    <Compile Include="INotificationService.cs" />
     <Compile Include="IScrapeSessionId.cs" />
     <Compile Include="IDecryptionService.cs" />
     <Compile Include="IEncryptionService.cs" />
